[package]
name = "video-to-ascii"
version = "0.1.0"
authors = ["Brighton Sikarskie <bsikar@tuta.io>"]
readme = "README.md"
description = "A simple rust video to ascii converter"
repository = "https://github.com/bsikar/video-to-ascii"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "3.1.8", features = ["cargo"] }
ffmpeg = { version = "0.3.0", features = ["build"] }
fontdue = "0.7.2"
image = "0.24.1"
termcolor = "1.1.3"
terminal_size = "0.1.17"

[features]
